Refactor codebase to simplify DTO mapping, enforce naming consistency, and remove redundant ID setters.